...
            LoadingIndicator(state.busy)
            Button(
                onClick = model::saveShare,
                enabled = !state.busy,
                modifier = Modifier.fillMaxWidth().padding(vertical = 16.dp),
            ) {
                Text(tr("保存到此文件夹"))
            }
        }
    }
}

